Updated:
- EnderIO to 0.7.0.165
- GregTech to 4.07m
- Thaumic Tinkerer to 2.1-65

Downgraded:
- None.

Added:
- Thaumic Tinkerer KAMI
- Player Beacons 1.2.0a

Removed:
- None.

Fixed:
- Big Reactors