@@ -1,0 +1,14 @@
+# Configuration file
+
+####################
+# block
+####################
+
+block {
+    I:BlockCableName=4090
+    I:BlockCableOutputName=4089
+    I:BlockCableRelayName=4088
+    I:BlockMachineManagerName=1311
+}
+
+
